--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                         </a>
                                     </div>
                                     <div class="col l-6 m-6">
-                                        <a href="https://www.youtube.com/watch?v=GgQFO8dL5XQ" target="_Blank width="620" height="382" frameborder="0" allowfullscreen allow="autoplay"></iframe>"target="_Blank class="case">
+                                        <a href="https://www.youtube.com/watch?v=GgQFO8dL5XQ" target="_Blank class="case">
                                             <div id="zoom">
                                                 <div class="case-item">
                                                     <img src="https://i.ytimg.com/vi/YBBCeN4zamY/maxresdefault.jpg" alt="" class="case-item--img">
@@ -248,7 +248,7 @@
                                                 2021 - nay
                                             </p>
                                             <p class="extend-item-para-text">
-                                                Mình cũng mới học lập trình thui và muốn lập trình về mảng website. Mình sẽ cố gắng hằng ngày để tìm hiểu học hỏi và kết hợp với học ở trường và học ngoài.
+                                                Mình cũng mới học lập trình thôi và muốn lập trình về mảng website. Mình sẽ cố gắng hằng ngày để tìm hiểu học hỏi và kết hợp với học ở trường và học ngoài.
                                             </p>
                                         </div>
                                         <div class="extend-item--body">
